2003-06-22  Kazu Hirata  <kazu@cs.umass.edu>

	* doc/invoke.texi: Document dump, .cfg.

2003-06-22  Kazu Hirata  <kazu@cs.umass.edu>

	* doc/invoke.texi: Alphabetize dump options.

2003-06-22  Kazu Hirata  <kazu@cs.umass.edu>

	* doc/invoke.texi: Remove a duplicate -dk.

2003-06-22  Kazu Hirata  <kazu@cs.umass.edu>

	* doc/rtl.texi: Fix the @findex for pre_modify.

Sat Jun 21 13:37:52 CEST 2003  Jan Hubicka  <jh@suse.cz>

	* i386.c (ix86_va_arg): Fix allocation of temporary slot.

2003-06-14  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* doc/contrib.texi (Contributors): Use Windows instead of Win32.

	Update Andreas Jaeger's entry.

	Merge the two entries of Kaveh Ghazi, David Edelsohn, and
	Loren J. Rittle.

2003-06-20  Geoffrey Keating  <geoffk@apple.com>

	PR c++/9393
	* doc/invoke.texi (Debugging Options): Document -frandom-seed.
	* configure.in: Check for gettimeofday.
	* tree.c (flag_random_seed): Define.
	(default_flag_random_seed): New.
	(append_random_chars): Use flag_random_seed rather than trying
	to acquire randomness here.
	* tree.h (default_flag_random_seed): Declare.
	* toplev.c (display_help): Add -frandom-seed and -fstack-limit-*
	descriptions.
	(decode_f_option): Handle -frandom-seed.
	(print_switch_values): Call default_flag_random_seed.
	* flags.h (flag_random_seed): Declare.
	* configure: Regenerate.
	* config.in: Regenerate.
	
2003-06-20  Mark Mitchell  <mark@codesourcery.com>

	PR c++/10888
	* tree-inline.c (expand_call_inline): Do not warn about failing to
	inline functions declared in system headers.
	* doc/invoke.texi (-Winline): Expand on documentation.

2003-06-20  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* configure.in (gcc_cv_as_gstabs_flag): Disable if assembler warns.
	* configure: Regenerate.
	Fixes PR driver/9362.

2003-06-19  Vladimir Makarov  <vmakarov@redhat.com>

	* haifa-sched.c (max_isse): Backport from the mainline.
	(choice_entry): New structure.
	(choice_stack, cycle_issued_insns, max_lookahead_tries,