@@ -1,3 +1,11 @@
+2003-01-28  Jason Merrill  <jason@redhat.com>
+
+	* cpplib.h (struct cpp_options): Add warn_deprecated field.
+	* cppinit.c (cpp_create_reader): Turn it on by default.
+	* c-opts.c (c_common_decode_option): Set it.
+	* cpplib.c (do_pragma_once): Only complain about #pragma once
+	if warn_deprecated is set.
+
 2003-06-22  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* doc/invoke.texi: Document dump, .cfg.
